# dmsrs

./: .babelrc  .gitignore  Cargo.toml  README.md  gulpfile.js  package-lock.json  package.json  postcss.config.js  webpack.config.js
assets/: browserconfig.xml
assets/contents/: main.css  main.js  style.css
assets/favicons/: site.webmanifest
graphics/: document-not-found.xcf
notes/sql/: 1.sql
src/: build.rs  main.rs
src/assets/javascripts/: index.js
src/assets/stylesheets/: _base.scss  _colors.scss  _grid-mixins.scss  _grid.scss  _mixins.scss  _variables.scss  main.scss
src/assets/stylesheets/base/: _base.scss  _colors.scss  _mixins.scss  _variables.scss
src/assets/stylesheets/components/: _button.scss  _document-box.scss  _form.scss  _heading.scss  _listing.scss  _logo.scss  _single-document.scss  _table.scss  _tag.scss
src/assets/stylesheets/layouts/: _page.scss
src/assets/stylesheets/pages/: _documents.scss
src/fairings/: mod.rs  pathfairing.rs
src/handlers/: correspondenthandler.rs  dbhandler.rs  documenthandler.rs  mod.rs  taghandler.rs
src/less/: colors.less  main.less
src/models/: correspondent.rs  currentpage.rs  document.rs  menuentry.rs  mod.rs  picture.rs  tag.rs
src/routes/: correspondents.rs  documents.rs  index.rs  mod.rs  tags.rs
static/assets/: main.js  style.css
static/css/: main.css
static/fonts/fontawesome/: all.css
templates/: 404.html  404.tera  correspondent.html  correspondents.html  document.html  document.tera  documents-view.html  documents.html  documents.tera  index.html  index.tera  menupage.html  menupage.tera  page.html  page.tera  tag.html  tags.html  tags.tera
templates/components/: document-box.html  tag.html
templates/correspondents/: add.html  index.html  single.html
templates/documents/: documents-view.html  index.html  single.html
templates/tags/: add.html  index.html  single.html
(+2 files in other folders)
